; Test executables:
;
; test1: phashtable test 1
; test2: phashtable test 2
; test3: string->string map
; test4: batch test
; IGNORE test5: fork with mmap test
; test6: frontend test
; IGNORE test7: unbuffered writes performance
; IGNORE test8: bigarray coerce
; test9: load partition

(executable
 (name "test1")
 (modules Test1)
 (libraries kv_hash))

(executable
 (name "test2")
 (modules Test2)
 (libraries kv_hash))

(executable
 (name "test3")
 (modules Test3)
 (libraries kv_hash))

(executable
 (name "test4")
 (modules Test4)
 (libraries kv_hash))

(executable
 (name "test5")
 (modules Test5)
 (libraries kv_hash threads))

(executable
 (name "test6") ; frontend
 (modules Test6)
 (libraries kv_hash threads))

(executable
 (name "test7") ; random rw to file
 (modules test7)
 (libraries extunix bigstringaf))

(executable
 (name "test8") ; bigarray kind casting
 (modules test8)
 (libraries extunix bigstringaf ctypes))

(executable
 (name "test9") ; bigarray kind casting
 (modules test9)
 (libraries kv_hash))

(alias
 (name "executables")
 (deps test1.exe test2.exe test3.exe test4.exe test5.exe test6.exe test7.exe test8.exe test9.exe))
